@@ -219,4 +219,7 @@ void SetTraceLevel(const char *service_name);
 void pidfile_create(const char *pidFile, pid_t pid);
 
 void config_get_logfiles(serverConfig_t *config);
+
+char * config_get_pidfile(serverConfig_t *config, const char *name);
+
 #endif
