@@ -32,7 +32,6 @@
 /* server timeout error */
 #define POP_TIMEOUT_MSG "-ERR I'm leaving, you're tooo slow\r\n"
 
-char *pidFile = DEFAULT_PID_DIR "dbmail-pop3d" DEFAULT_PID_EXT;
 char *configFile = DEFAULT_CONFIG_FILE;
 
 /* set up database login data */
@@ -73,6 +72,7 @@ int main(int argc, char *argv[])
 	serverConfig_t config;
 	int result, no_daemonize = 0, log_verbose = 0;
 	int opt;
+	char *pidFile = NULL;
 
 	g_mime_init(0);
 	openlog(PNAME, LOG_PID, LOG_MAIL);
@@ -96,7 +96,7 @@ int main(int argc, char *argv[])
 			return 0;
 		case 'p':
 			if (optarg && strlen(optarg) > 0)
-				pidFile = optarg;
+				pidFile = g_strdup(optarg);
 			else {
 				fprintf(stderr,
 					"dbmail-pop3d: -p requires a filename "
@@ -140,7 +140,11 @@ int main(int argc, char *argv[])
 
 	/* We write the pidFile after daemonize because
 	 * we may actually be a child of the original process. */
+	if (! pidFile)
+		pidFile = config_get_pidfile(&config, "dbmail-pop3d");
+	
 	pidfile_create(pidFile, getpid());
+	g_free(pidFile);
 
 	do {
 		result = server_run(&config);
